<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="#E0F7FA"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="116dp"
        android:layout_height="193dp"
        android:clickable="true"
        android:background="@color/Gray"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageBanner"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/screaam_v" />

            <TextView
                android:id="@+id/movieName"
                android:layout_width="69dp"
                android:layout_height="21dp"
                android:textStyle="bold"
                android:layout_margin="@dimen/cardview_default_radius"
                android:text="@string/Scream_movie"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/genre"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_default_radius"
                android:text="@string/Scream_Genre"
                android:textColor="@color/RYB_RED"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/ageRestriction"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/cardview_default_radius"
                android:text="@string/Scream_18"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

